# DevTracker

./: .gitignore  LICENSE  README.md  README_EN.md  SECURITY.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  staple-macos-release.yml
docs/: README_zh-CN.md
scripts/: build-macos-release.sh  check-repository-safety.sh  demo-data.sql  run-demo.sh  test-macos-release-config.sh  test-repository-safety.sh  verify-macos-release.sh
src/: App.vue  main.ts  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  models.rs
src-tauri/src/commands/: ai.rs  board.rs  export.rs  member.rs  mod.rs  project.rs  task.rs
src/components/: CellRenderer.vue  ExportButton.vue  StarRating.vue  TaskForm.vue
src/i18n/: domain.test.ts  domain.ts  i18n.test.ts  index.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
src/router/: index.ts
src/stores/: board.ts  member.ts  project.ts  task.ts  theme.ts
src/utils/: aiKey.ts  dailyReport.test.ts  dailyReport.ts  delay.ts  export.ts  plainText.test.ts  plainText.ts  report.test.ts  report.ts  reportDraft.test.ts  reportDraft.ts  useColumns.test.ts  useColumns.ts  weeklyReport.test.ts  weeklyReport.ts
src/views/: BoardLayout.test.ts  BoardLayout.vue  DailyReportView.vue  DelayView.vue  IdleView.vue  KanbanView.vue  ReleaseView.vue  ReportView.vue  Settings.vue  StatsView.vue  TableView.vue  WeeklyReportView.vue
