[package]
name = "devtracker"
version = "0.1.1"
edition = "2021"

[lib]
name = "devtracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["backup", "bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
ureq = { version = "2", features = ["json", "tls"] }
